add logic to "Week of number"